[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Conflagrate <support@specswim.com>"]
description = "Library used for pretty print mechanics."
name = "fantasy-swimming-mathematics"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
termcolor = "^1.1"
[tool.poetry.dev-dependencies]